# wgpu-gameui

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  TODO.md
benches/: ui_stress.rs
examples/: dioxus_test.rs  dioxus_ui.rs  dioxus_ui_nouse.rs  hello_ui.rs
src/: affine.rs  animation.rs  click_tracker.rs  color.rs  cursor.rs  drag_tracker.rs  frame.rs  layer.rs  layout.rs  lib.rs  nav.rs  projection.rs  style.rs  text.rs  theme.rs  ui_context.rs
src/render/: atlas.rs  blur.rs  blur.wgsl  glyph_msdf.rs  image_cache.rs  mod.rs  msdf_atlas.rs  phosphor.rs  ui.wgsl  ui_msdf.wgsl  ui_renderer.rs
src/widgets/: banner.rs  button.rs  checkbox.rs  color_picker.rs  drag.rs  drag_handle.rs  draw_list.rs  dropdown.rs  focus.rs  group.rs  hit_zone.rs  icon.rs  image.rs  image_button.rs  list.rs  mod.rs  number_input.rs  panel.rs  progress_bar.rs  radio.rs  scroll_view.rs  separator.rs  slider.rs  table.rs  tabs.rs  text_input.rs  toast.rs  tooltip.rs  tree.rs
tests/: blur.rs  chrome_instancing.rs  circle_instancing.rs  icon_instancing.rs  ime_preedit.rs  msdf_render.rs  multiline_text_input.rs  nine_slice_instancing.rs  span_text.rs  widget_gallery.rs
