[package]
name = "wgpu-gameui"
version = "0.1.0"
edition = "2024"
description = "Custom wgpu-based game UI library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serialexp/wgpu-gameui"

[dependencies]
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.8"
log = "0.4"
# Profiling (optional, behind "tracy" feature). Emits `tracing` spans that the
# host application's tracing-tracy subscriber collects into the same capture.
tracing = { version = "0.1", optional = true }
# MSDF text: pure-Rust multi-channel signed distance field generation from glyph
# outlines. `image` provides the `RgbImage` buffer fdsm fills, plus PNG/JPEG codecs
# for runtime UI image loading (UiImage/UiImageBox etc.).
fdsm = "0.8"
fdsm-ttf-parser = "0.2"
ttf-parser = "0.25"
nalgebra = "0.34"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Bundled default UI font (Noto Sans regular/bold/italic/bold-italic). Optional,
# enabled by the default `bundled-font` feature so the UI renders identically on
# every machine without depending on installed system fonts.
notosans = { version = "0.1.0", optional = true }

[features]
default = ["bundled-font"]
# Emit tracing spans around the render path for Tracy profiling.
tracy = ["dep:tracing"]
# Embed Noto Sans and register it as the default sans-serif family. Disable
# (`--no-default-features`) to drop ~1.5 MB and fall back to system fonts only.
bundled-font = ["dep:notosans"]

[dev-dependencies]
winit = "0.30"
pollster = "0.3"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
notosans = "0.1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "hello_ui"
path = "examples/hello_ui.rs"

[[bench]]
name = "ui_stress"
harness = false
