[package]
name = "wgpu-gameui"
version = "0.1.0"
edition = "2024"
description = "Custom wgpu-based game UI library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serialexp/wgpu-gameui"

[dependencies]
wgpu = { version = "30", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.12"
log = "0.4"
# Grapheme-cluster segmentation for vertical (stacked) text layout — splitting a
# label into one cluster per line. Already in the tree transitively via cosmic-text.
unicode-segmentation = "1"
# Profiling (optional, behind "tracy" feature). Emits `tracing` spans that the
# host application's tracing-tracy subscriber collects into the same capture.
tracing = { version = "0.1", optional = true }
# MSDF text: pure-Rust multi-channel signed distance field generation from glyph
# outlines. `image` provides the `RgbImage` buffer fdsm fills, plus PNG/JPEG codecs
# for runtime UI image loading (UiImage/UiImageBox etc.).
fdsm = "0.8"
fdsm-ttf-parser = "0.2"
ttf-parser = "0.25"
nalgebra = "0.34.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Bundled default UI font (Noto Sans regular/bold/italic/bold-italic). Optional,
# enabled by the default `bundled-font` feature so the UI renders identically on
# every machine without depending on installed system fonts.
notosans = { version = "0.1.0", optional = true }
axum = { version = "0.8.7" , optional = true }
tokio = { version = "1.48.0", features = ["full","rt"], optional = true }
libc = { version = "0.2.178", optional = true  }
web-time = { version = "1.1.0" }

[features]
default = ["bundled-font", "phosphor-icons"]
# Emit tracing spans around the render path for Tracy profiling.
tracy = ["dep:tracing"]
# Embed Noto Sans and register it as the default sans-serif family. Disable
# (`--no-default-features`) to drop ~1.5 MB and fall back to system fonts only.
bundled-font = ["dep:notosans"]
# Embed the Phosphor (regular weight, MIT) icon font and expose the
# `PhosphorIcon` enum + `Icon` widget, rendered through a dedicated MSDF icon
# atlas. Disable (`--no-default-features`) to drop the ~0.5 MB font; widgets
# fall back to text glyphs (`+`/`\u{2212}`) for their icon affordances.
phosphor-icons = []

web = ["dioxus/web","bundled-font", "phosphor-icons"]
server = ["dioxus/server", "dep:libc", "dep:tokio", "dep:axum"]


[dev-dependencies]
winit = "0.30"
pollster = "0.3"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
notosans = "0.1.0"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

manganis = {  version = "0.7.2" }
dioxus-logger = { version = "0.7.2" }
dioxus = { version = "0.7.2", features = ["fullstack","router", "hooks", "macro","signals"] }
dioxus-cli-config = { version = "0.7.2"}

serde = { version = "1.0.218" }
byteorder = { version = "1.5.0" }
chrono = { version = "0.4.42" }
tokio_with_wasm = { version = "0.8.7", features = ["time"]}
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = ["console","Document", "Window", "Element", "HtmlCanvasElement", "KeyboardEvent", "Performance","ResizeObserver","MouseEvent","DomRect","WheelEvent","CssStyleDeclaration" ] }
tracing = { version = "0.1" }

[[example]]
name = "hello_ui"
path = "examples/hello_ui.rs"

[[example]]
name = "dioxus_ui"
path = "examples/dioxus_ui.rs"

[[example]]
name = "dioxus_test"
path = "examples/dioxus_test.rs"


[[bench]]
name = "ui_stress"
harness = false
